--- a/phaeton/Makefile.in
+++ b/phaeton/Makefile.in
@@ -6,7 +6,7 @@ GMIME_CFLAGS = `$(GMIME_CONFIG) --cflags`
 GMIME_LIBS = `$(GMIME_CONFIG) --libs`
 MDB_DIR = /home/larsi/gmane/mdb
 
-HEADER_FILES=config.h $(MDB_DIR)/util.h
+HEADER_FILES=config.h $(MDB_DIR)/util.h dispatch.h phaeton.h commands.h
 
 CPPFLAGS=@CPPFLAGS@ $(GMIME_CFLAGS) -I$(MDB_DIR) -I/usr/local/include -g -O3 -Wall
 LDFLAGS=@LDFLAGS@ $(GMIME_LIBS)
@@ -20,9 +20,13 @@ start.o: start.c $(HEADER_FILES)
 
 daemon.o: daemon.c $(HEADER_FILES)
 
-phaetond: phaeton.o start.o daemon.o $(MDB_DIR)/util.o
+dispatch.o: dispatch.c $(HEADER_FILES)
+
+commands.o: commands.c $(HEADER_FILES)
+
+phaetond: phaeton.o start.o daemon.o $(MDB_DIR)/util.o dispatch.o commands.o
 	$(CC) $(CPPFLAGS) -o phaetond $(LDFLAGS) phaeton.o\
-		start.o daemon.o $(MDB_DIR)/util.o
+		start.o daemon.o $(MDB_DIR)/util.o dispatch.o commands.o
 
 clean:
 	$(RM) indexer *.o
